# docxide-pdf

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh  justfile  lisa.sh  plan.md  plan_STEM.md  plan_STEM_progress.md  plan_archery.md  plan_archery_progress.md  plan_cleanup.md  plan_drawingML.md  plan_stem_table.md  plan_stem_table_progress.md  plan_vaccine_fix.md  progress.md  progress.txt  ralph-loop.sh  ralph_single.sh  roadmap.md  willie.sh
.cargo/: config.toml
.claude/: settings.json  settings.local.json
ralph/: handbook_fix.md  handbook_fix_progress.md  lisa_progress.md  plan_STEM.md  plan_archery.md  plan_deed_fix.md  plan_deed_fix_progress.md  plan_education.md  plan_education_progress.md  plan_fix_vaccine_more.md  plan_fix_vaccine_more_progress.md  plan_japanese.md  plan_japanese_progress.md  plan_samtale.md  plan_samtale_progress.md  plan_stem_table.md  plan_vaccine-gradient-fix.md  plan_vaccine-gradient-fix_progress.md  plan_vaccine_fix.md  plan_vaccine_fix_progress.md  plan_vaccine_heading_fix.md  plan_vaccine_heading_fix_progress.md  plan_vaccine_y_alignment.md  plan_vaccine_y_alignment_progress.md  plan_vaccines_fix_header_spacing.md  plan_vaccines_fix_header_spacing_progress.md  plan_work_deed2.md  plan_work_deed2_progress.md  willie_progress.md
showcase/: README.md
src/: docx.rs  error.rs  fonts.rs  lib.rs  main.rs  model.rs  pdf.rs
src/docx/: alt_chunk.rs  charts.rs  embedded_fonts.rs  headers_footers.rs  images.rs  mod.rs  numbering.rs  runs.rs  sections.rs  settings.rs  smartart.rs  styles.rs  tables.rs  textbox.rs
src/fonts/: cache.rs  discovery.rs  embed.rs  encoding.rs  mod.rs
src/geometry/: definitions.rs  formulas.rs  mod.rs  path.rs
src/pdf/: chart_legend.rs  charts.rs  charts_radial.rs  footnotes.rs  header_footer.rs  layout.rs  mod.rs  smartart.rs  table.rs
tests/: baselines.json  file_size.rs  font_validation.rs  image_count.rs  page_geometry.rs  speed.rs  text_boundary.rs  visual_comparison.rs
tools/: Cargo.toml  convert_corpus_to_pdf.py  download_corpus.py  graph.py  showcase.py
(+75 files in other folders)
