[package]
name = "docxide-pdf"
version = "0.7.1"
edition = "2024"
description = "CLI and Library for converting DOCX files to PDF, matching Microsoft Word's output as closely as possible"
license = "Apache-2.0"
repository = "https://github.com/sverrejb/docxide-pdf"
keywords = ["experimental", "docx", "pdf", "word", "converter"]
categories = ["command-line-utilities", "text-processing", "text-editors"]
exclude = [
    "tools/",
    "tests/",
    "showcase/",
    "lancedb/",
    "models/",
    "specs/",
    "CLAUDE.md",
    ".claude/",
    ".gitignore",
    "roadmap.md",
]

[lib]
name = "docxide_pdf"
path = "src/lib.rs"

[[bin]]
name = "docxide-pdf"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "env_logger"]

[dependencies]
zip = "2"
roxmltree = "0.21"
pdf-writer = "0.14"
ttf-parser = "0.25"
log = "0.4"
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
memmap2 = "0.9.10"
subsetter = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
miniz_oxide = "0.8"

[dev-dependencies]
image = { version = "0.25" }
env_logger = "0.11"
rayon = "1"
zip = "2"
roxmltree = "0.21"

# Optimize deps in dev/test builds — image processing is ~10× slower without this
[profile.dev.package."*"]
opt-level = 2
